tests/snapshots/bridge__tests__bridge_lint_008_only.snap
---
source: tests/bridge.rs
expression: findings
---
- rule_id: PGM008
  severity: Critical
  message: "Adding NOT NULL column 'region' to existing table 'accounts' without a DEFAULT will fail if the table has any rows. Add a DEFAULT value, or add the column as nullable and backfill."
  file: 008-add-not-null.xml
  start_line: 13
  end_line: 13
- rule_id: PGM008
  severity: Critical
  message: "Adding NOT NULL column 'product_type' to existing table 'products' without a DEFAULT will fail if the table has any rows. Add a DEFAULT value, or add the column as nullable and backfill."
  file: 008-add-not-null.xml
  start_line: 31
  end_line: 31
- rule_id: PGM108
  severity: Info
  message: "Column 'region' on 'accounts' uses varchar(50). Prefer text — varchar(n) has no performance benefit in PostgreSQL and adds an artificial limit that may require future schema changes."
  file: 008-add-not-null.xml
  start_line: 13
  end_line: 13
- rule_id: PGM108
  severity: Info
  message: "Column 'product_type' on 'products' uses varchar(100). Prefer text — varchar(n) has no performance benefit in PostgreSQL and adds an artificial limit that may require future schema changes."
  file: 008-add-not-null.xml
  start_line: 31
  end_line: 31
