tests/snapshots/bridge__tests__bridge_lint_010_only.snap
---
source: tests/bridge.rs
expression: findings
---
- rule_id: PGM002
  severity: Critical
  message: "DROP INDEX 'idx_products_name_article' on existing table 'products' should use CONCURRENTLY to avoid holding an exclusive lock."
  file: 010-cleanup.xml
  start_line: 7
  end_line: 7
- rule_id: PGM201
  severity: Minor
  message: "DROP TABLE 'event_log' removes an existing table. This is irreversible and all data will be lost."
  file: 010-cleanup.xml
  start_line: 17
  end_line: 17
- rule_id: PGM203
  severity: Minor
  message: "TRUNCATE TABLE 'event_log' removes all rows from an existing table. This is irreversible and does not fire ON DELETE triggers."
  file: 010-cleanup.xml
  start_line: 12
  end_line: 12
- rule_id: PGM204
  severity: Major
  message: "TRUNCATE TABLE 'event_log' CASCADE silently extends to all tables with foreign key references to 'event_log', and recursively to their dependents. Verify the full cascade chain is intentionally truncated."
  file: 010-cleanup.xml
  start_line: 12
  end_line: 12
- rule_id: PGM401
  severity: Minor
  message: "DROP INDEX 'idx_products_name_article': add IF EXISTS for idempotent migrations."
  file: 010-cleanup.xml
  start_line: 7
  end_line: 7
- rule_id: PGM401
  severity: Minor
  message: "DROP TABLE 'event_log': add IF EXISTS for idempotent migrations."
  file: 010-cleanup.xml
  start_line: 17
  end_line: 17
