tests/snapshots/bridge__tests__bridge_lint_all_findings.snap
---
source: tests/bridge.rs
expression: findings
---
- rule_id: PGM101
  severity: Minor
  message: "Column 'created' on 'users' uses 'timestamp without time zone'. Use 'timestamptz' (timestamp with time zone) instead to store unambiguous points in time."
  file: 001-base-tables.xml
  start_line: 7
  end_line: 7
- rule_id: PGM101
  severity: Minor
  message: "Column 'created' on 'accounts' uses 'timestamp without time zone'. Use 'timestamptz' (timestamp with time zone) instead to store unambiguous points in time."
  file: 001-base-tables.xml
  start_line: 26
  end_line: 26
- rule_id: PGM101
  severity: Minor
  message: "Column 'created' on 'subscriptions' uses 'timestamp without time zone'. Use 'timestamptz' (timestamp with time zone) instead to store unambiguous points in time."
  file: 001-base-tables.xml
  start_line: 45
  end_line: 45
- rule_id: PGM101
  severity: Minor
  message: "Column 'created' on 'orders' uses 'timestamp without time zone'. Use 'timestamptz' (timestamp with time zone) instead to store unambiguous points in time."
  file: 002-orders.xml
  start_line: 7
  end_line: 7
- rule_id: PGM101
  severity: Minor
  message: "Column 'updated' on 'orders' uses 'timestamp without time zone'. Use 'timestamptz' (timestamp with time zone) instead to store unambiguous points in time."
  file: 002-orders.xml
  start_line: 7
  end_line: 7
- rule_id: PGM101
  severity: Minor
  message: "Column 'created' on 'order_actions' uses 'timestamp without time zone'. Use 'timestamptz' (timestamp with time zone) instead to store unambiguous points in time."
  file: 002-orders.xml
  start_line: 32
  end_line: 32
- rule_id: PGM101
  severity: Minor
  message: "Column 'created' on 'subscription_items' uses 'timestamp without time zone'. Use 'timestamptz' (timestamp with time zone) instead to store unambiguous points in time."
  file: 002-orders.xml
  start_line: 63
  end_line: 63
- rule_id: PGM101
  severity: Minor
  message: "Column 'created' on 'event_log' uses 'timestamp without time zone'. Use 'timestamptz' (timestamp with time zone) instead to store unambiguous points in time."
  file: 006-table-no-pk.xml
  start_line: 11
  end_line: 11
- rule_id: PGM101
  severity: Minor
  message: "Column 'processed_at' on 'users' uses 'timestamp without time zone'. Use 'timestamptz' (timestamp with time zone) instead to store unambiguous points in time."
  file: 011-dont-do-this-types.xml
  start_line: 7
  end_line: 7
- rule_id: PGM103
  severity: Minor
  message: "Column 'region_code' on 'accounts' uses 'char(3)'. The char(n) type pads with spaces, wastes storage, and is no faster than text or varchar in PostgreSQL. Use text or varchar instead."
  file: 011-dont-do-this-types.xml
  start_line: 14
  end_line: 14
- rule_id: PGM106
  severity: Minor
  message: "Column 'price_structure' on 'products' uses 'json'. Use 'jsonb' instead — it's faster, smaller, indexable, and supports containment operators. Only use 'json' if you need to preserve exact text representation or key order."
  file: 001-base-tables.xml
  start_line: 64
  end_line: 64
- rule_id: PGM107
  severity: Major
  message: "Primary key column 'id' on 'products' uses integer. Consider using bigint to avoid exhausting the integer range on high-write tables."
  file: 001-base-tables.xml
  start_line: 64
  end_line: 64
- rule_id: PGM107
  severity: Major
  message: "Primary key column 'id' on 'price_plans' uses integer. Consider using bigint to avoid exhausting the integer range on high-write tables."
  file: 007-volatile-defaults.xml
  start_line: 15
  end_line: 15
- rule_id: PGM107
  severity: Major
  message: "Primary key column 'id' on 'price_plan_products' uses integer. Consider using bigint to avoid exhausting the integer range on high-write tables."
  file: 007-volatile-defaults.xml
  start_line: 40
  end_line: 40
- rule_id: PGM108
  severity: Info
  message: "Column 'display_name' on 'users' uses varchar(100). Prefer text — varchar(n) has no performance benefit in PostgreSQL and adds an artificial limit that may require future schema changes."
  file: 001-base-tables.xml
  start_line: 7
  end_line: 7
- rule_id: PGM108
  severity: Info
  message: "Column 'username' on 'users' uses varchar(100). Prefer text — varchar(n) has no performance benefit in PostgreSQL and adds an artificial limit that may require future schema changes."
  file: 001-base-tables.xml
  start_line: 7
  end_line: 7
- rule_id: PGM108
  severity: Info
  message: "Column 'email' on 'users' uses varchar(255). Prefer text — varchar(n) has no performance benefit in PostgreSQL and adds an artificial limit that may require future schema changes."
  file: 001-base-tables.xml
  start_line: 7
  end_line: 7
- rule_id: PGM108
  severity: Info
  message: "Column 'name' on 'accounts' uses varchar(200). Prefer text — varchar(n) has no performance benefit in PostgreSQL and adds an artificial limit that may require future schema changes."
  file: 001-base-tables.xml
  start_line: 26
  end_line: 26
- rule_id: PGM108
  severity: Info
  message: "Column 'org_number' on 'accounts' uses varchar(20). Prefer text — varchar(n) has no performance benefit in PostgreSQL and adds an artificial limit that may require future schema changes."
  file: 001-base-tables.xml
  start_line: 26
  end_line: 26
- rule_id: PGM108
  severity: Info
  message: "Column 'status' on 'accounts' uses varchar(50). Prefer text — varchar(n) has no performance benefit in PostgreSQL and adds an artificial limit that may require future schema changes."
  file: 001-base-tables.xml
  start_line: 26
  end_line: 26
- rule_id: PGM108
  severity: Info
  message: "Column 'status' on 'subscriptions' uses varchar(50). Prefer text — varchar(n) has no performance benefit in PostgreSQL and adds an artificial limit that may require future schema changes."
  file: 001-base-tables.xml
  start_line: 45
  end_line: 45
- rule_id: PGM108
  severity: Info
  message: "Column 'name' on 'products' uses varchar(1000). Prefer text — varchar(n) has no performance benefit in PostgreSQL and adds an artificial limit that may require future schema changes."
  file: 001-base-tables.xml
  start_line: 64
  end_line: 64
- rule_id: PGM108
  severity: Info
  message: "Column 'article_number' on 'products' uses varchar(100). Prefer text — varchar(n) has no performance benefit in PostgreSQL and adds an artificial limit that may require future schema changes."
  file: 001-base-tables.xml
  start_line: 64
  end_line: 64
- rule_id: PGM108
  severity: Info
  message: "Column 'description' on 'products' uses varchar(10000). Prefer text — varchar(n) has no performance benefit in PostgreSQL and adds an artificial limit that may require future schema changes."
  file: 001-base-tables.xml
  start_line: 64
  end_line: 64
- rule_id: PGM108
  severity: Info
  message: "Column 'order_type' on 'orders' uses varchar(50). Prefer text — varchar(n) has no performance benefit in PostgreSQL and adds an artificial limit that may require future schema changes."
  file: 002-orders.xml
  start_line: 7
  end_line: 7
- rule_id: PGM108
  severity: Info
  message: "Column 'status' on 'orders' uses varchar(50). Prefer text — varchar(n) has no performance benefit in PostgreSQL and adds an artificial limit that may require future schema changes."
  file: 002-orders.xml
  start_line: 7
  end_line: 7
- rule_id: PGM108
  severity: Info
  message: "Column 'action_type' on 'order_actions' uses varchar(50). Prefer text — varchar(n) has no performance benefit in PostgreSQL and adds an artificial limit that may require future schema changes."
  file: 002-orders.xml
  start_line: 32
  end_line: 32
- rule_id: PGM108
  severity: Info
  message: "Column 'status' on 'order_actions' uses varchar(50). Prefer text — varchar(n) has no performance benefit in PostgreSQL and adds an artificial limit that may require future schema changes."
  file: 002-orders.xml
  start_line: 32
  end_line: 32
- rule_id: PGM108
  severity: Info
  message: "Column 'result' on 'order_actions' uses varchar(50). Prefer text — varchar(n) has no performance benefit in PostgreSQL and adds an artificial limit that may require future schema changes."
  file: 002-orders.xml
  start_line: 32
  end_line: 32
- rule_id: PGM108
  severity: Info
  message: "Column 'status' on 'subscription_items' uses varchar(50). Prefer text — varchar(n) has no performance benefit in PostgreSQL and adds an artificial limit that may require future schema changes."
  file: 002-orders.xml
  start_line: 63
  end_line: 63
- rule_id: PGM108
  severity: Info
  message: "Column 'invoice_reference' on 'orders' uses varchar(100). Prefer text — varchar(n) has no performance benefit in PostgreSQL and adds an artificial limit that may require future schema changes."
  file: 003-add-columns.xml
  start_line: 7
  end_line: 7
- rule_id: PGM108
  severity: Info
  message: "Column 'your_reference' on 'orders' uses varchar(200). Prefer text — varchar(n) has no performance benefit in PostgreSQL and adds an artificial limit that may require future schema changes."
  file: 003-add-columns.xml
  start_line: 8
  end_line: 8
- rule_id: PGM108
  severity: Info
  message: "Column 'billing_email' on 'accounts' uses varchar(255). Prefer text — varchar(n) has no performance benefit in PostgreSQL and adds an artificial limit that may require future schema changes."
  file: 003-add-columns.xml
  start_line: 16
  end_line: 16
- rule_id: PGM108
  severity: Info
  message: "Column 'phone' on 'accounts' uses varchar(50). Prefer text — varchar(n) has no performance benefit in PostgreSQL and adds an artificial limit that may require future schema changes."
  file: 003-add-columns.xml
  start_line: 17
  end_line: 17
- rule_id: PGM108
  severity: Info
  message: "Column 'country_code' on 'accounts' uses varchar(3). Prefer text — varchar(n) has no performance benefit in PostgreSQL and adds an artificial limit that may require future schema changes."
  file: 003-add-columns.xml
  start_line: 18
  end_line: 18
- rule_id: PGM108
  severity: Info
  message: "Column 'subscription_type' on 'subscriptions' uses varchar(50). Prefer text — varchar(n) has no performance benefit in PostgreSQL and adds an artificial limit that may require future schema changes."
  file: 003-add-columns.xml
  start_line: 25
  end_line: 25
- rule_id: PGM108
  severity: Info
  message: "Column 'event_type' on 'event_log' uses varchar(100). Prefer text — varchar(n) has no performance benefit in PostgreSQL and adds an artificial limit that may require future schema changes."
  file: 006-table-no-pk.xml
  start_line: 11
  end_line: 11
- rule_id: PGM108
  severity: Info
  message: "Column 'invoice_id' on 'subscription_invoices' uses varchar(19). Prefer text — varchar(n) has no performance benefit in PostgreSQL and adds an artificial limit that may require future schema changes."
  file: 006-table-no-pk.xml
  start_line: 27
  end_line: 27
- rule_id: PGM108
  severity: Info
  message: "Column 'region' on 'accounts' uses varchar(50). Prefer text — varchar(n) has no performance benefit in PostgreSQL and adds an artificial limit that may require future schema changes."
  file: 008-add-not-null.xml
  start_line: 13
  end_line: 13
- rule_id: PGM108
  severity: Info
  message: "Column 'product_type' on 'products' uses varchar(100). Prefer text — varchar(n) has no performance benefit in PostgreSQL and adds an artificial limit that may require future schema changes."
  file: 008-add-not-null.xml
  start_line: 31
  end_line: 31
- rule_id: PGM108
  severity: Info
  message: "Column 'display_name' on 'users' uses varchar(100). Prefer text — varchar(n) has no performance benefit in PostgreSQL and adds an artificial limit that may require future schema changes."
  file: 013-if-not-exists.xml
  start_line: 12
  end_line: 12
- rule_id: PGM108
  severity: Info
  message: "Column 'entity_type' on 'audit_log' uses varchar(100). Prefer text — varchar(n) has no performance benefit in PostgreSQL and adds an artificial limit that may require future schema changes."
  file: 013-if-not-exists.xml
  start_line: 22
  end_line: 22
- rule_id: PGM108
  severity: Info
  message: "Column 'action' on 'audit_log' uses varchar(50). Prefer text — varchar(n) has no performance benefit in PostgreSQL and adds an artificial limit that may require future schema changes."
  file: 013-if-not-exists.xml
  start_line: 22
  end_line: 22
- rule_id: PGM401
  severity: Minor
  message: "DROP INDEX 'idx_products_name_article': add IF EXISTS for idempotent migrations."
  file: 010-cleanup.xml
  start_line: 7
  end_line: 7
- rule_id: PGM401
  severity: Minor
  message: "DROP TABLE 'event_log': add IF EXISTS for idempotent migrations."
  file: 010-cleanup.xml
  start_line: 17
  end_line: 17
- rule_id: PGM402
  severity: Minor
  message: "CREATE TABLE 'users': add IF NOT EXISTS for idempotent migrations."
  file: 001-base-tables.xml
  start_line: 7
  end_line: 7
- rule_id: PGM402
  severity: Minor
  message: "CREATE TABLE 'accounts': add IF NOT EXISTS for idempotent migrations."
  file: 001-base-tables.xml
  start_line: 26
  end_line: 26
- rule_id: PGM402
  severity: Minor
  message: "CREATE TABLE 'subscriptions': add IF NOT EXISTS for idempotent migrations."
  file: 001-base-tables.xml
  start_line: 45
  end_line: 45
- rule_id: PGM402
  severity: Minor
  message: "CREATE TABLE 'products': add IF NOT EXISTS for idempotent migrations."
  file: 001-base-tables.xml
  start_line: 64
  end_line: 64
- rule_id: PGM402
  severity: Minor
  message: "CREATE TABLE 'orders': add IF NOT EXISTS for idempotent migrations."
  file: 002-orders.xml
  start_line: 7
  end_line: 7
- rule_id: PGM402
  severity: Minor
  message: "CREATE TABLE 'order_actions': add IF NOT EXISTS for idempotent migrations."
  file: 002-orders.xml
  start_line: 32
  end_line: 32
- rule_id: PGM402
  severity: Minor
  message: "CREATE INDEX 'idx_order_actions_order_id': add IF NOT EXISTS for idempotent migrations."
  file: 002-orders.xml
  start_line: 33
  end_line: 33
- rule_id: PGM402
  severity: Minor
  message: "CREATE INDEX 'idx_orders_account_id': add IF NOT EXISTS for idempotent migrations."
  file: 002-orders.xml
  start_line: 34
  end_line: 34
- rule_id: PGM402
  severity: Minor
  message: "CREATE TABLE 'subscription_items': add IF NOT EXISTS for idempotent migrations."
  file: 002-orders.xml
  start_line: 63
  end_line: 63
- rule_id: PGM402
  severity: Minor
  message: "CREATE INDEX 'idx_subscription_items_subscription': add IF NOT EXISTS for idempotent migrations."
  file: 002-orders.xml
  start_line: 64
  end_line: 64
- rule_id: PGM402
  severity: Minor
  message: "CREATE INDEX 'idx_users_email': add IF NOT EXISTS for idempotent migrations."
  file: 004-create-indexes.xml
  start_line: 13
  end_line: 13
- rule_id: PGM402
  severity: Minor
  message: "CREATE INDEX 'idx_subscriptions_account_id': add IF NOT EXISTS for idempotent migrations."
  file: 004-create-indexes.xml
  start_line: 19
  end_line: 19
- rule_id: PGM402
  severity: Minor
  message: "CREATE INDEX 'idx_products_name_article': add IF NOT EXISTS for idempotent migrations."
  file: 004-create-indexes.xml
  start_line: 26
  end_line: 26
- rule_id: PGM402
  severity: Minor
  message: "CREATE TABLE 'event_log': add IF NOT EXISTS for idempotent migrations."
  file: 006-table-no-pk.xml
  start_line: 11
  end_line: 11
- rule_id: PGM402
  severity: Minor
  message: "CREATE TABLE 'subscription_invoices': add IF NOT EXISTS for idempotent migrations."
  file: 006-table-no-pk.xml
  start_line: 27
  end_line: 27
- rule_id: PGM402
  severity: Minor
  message: "CREATE TABLE 'price_plans': add IF NOT EXISTS for idempotent migrations."
  file: 007-volatile-defaults.xml
  start_line: 15
  end_line: 15
- rule_id: PGM402
  severity: Minor
  message: "CREATE TABLE 'price_plan_products': add IF NOT EXISTS for idempotent migrations."
  file: 007-volatile-defaults.xml
  start_line: 40
  end_line: 40
- rule_id: PGM402
  severity: Minor
  message: "CREATE INDEX 'idx_users_display_name': add IF NOT EXISTS for idempotent migrations."
  file: 012-suppressed.xml
  start_line: 11
  end_line: 11
- rule_id: PGM402
  severity: Minor
  message: "CREATE TABLE 'suppressed_audit': add IF NOT EXISTS for idempotent migrations."
  file: 012-suppressed.xml
  start_line: 21
  end_line: 21
- rule_id: PGM403
  severity: Minor
  message: "CREATE TABLE IF NOT EXISTS 'users' is a no-op — the table already exists in the migration history. The definition in this statement is silently ignored by PostgreSQL. If the column definitions differ from the actual table state, this migration is misleading."
  file: 013-if-not-exists.xml
  start_line: 12
  end_line: 12
- rule_id: PGM501
  severity: Major
  message: "Foreign key on 'orders(user_id)' has no covering index. Queries joining or filtering on these columns, and referential integrity checks, cause sequential scans on the referencing table."
  file: 005-add-fk.xml
  start_line: 13
  end_line: 13
- rule_id: PGM501
  severity: Major
  message: "Foreign key on 'subscription_invoices(subscription_id)' has no covering index. Queries joining or filtering on these columns, and referential integrity checks, cause sequential scans on the referencing table."
  file: 006-table-no-pk.xml
  start_line: 28
  end_line: 28
- rule_id: PGM502
  severity: Major
  message: "Table 'subscription_invoices' has no primary key."
  file: 006-table-no-pk.xml
  start_line: 27
  end_line: 27
- rule_id: PGM503
  severity: Info
  message: "Table 'event_log' uses UNIQUE NOT NULL instead of PRIMARY KEY. Functionally equivalent but PRIMARY KEY is conventional and more explicit."
  file: 006-table-no-pk.xml
  start_line: 11
  end_line: 11
- rule_id: PGM508
  severity: Info
  message: "Index 'idx_subscriptions_account_id_covering' on 'subscriptions' (account_id) is an exact duplicate of index 'idx_subscriptions_account_id'."
  file: 010-cleanup.xml
  start_line: 38
  end_line: 40
