tests/snapshots/bridge__tests__bridge_multi_schema_all_findings.snap
---
source: tests/bridge.rs
expression: findings
---
- rule_id: PGM101
  severity: Minor
  message: "Column 'last_login' on 'auth.users' uses 'timestamp without time zone'. Use 'timestamptz' (timestamp with time zone) instead to store unambiguous points in time."
  file: repos/liquibase-multi-schema/changelog/003-same-name-ops.xml
  start_line: 12
  end_line: 12
- rule_id: PGM108
  severity: Info
  message: "Column 'email' on 'auth.users' uses varchar(255). Prefer text — varchar(n) has no performance benefit in PostgreSQL and adds an artificial limit that may require future schema changes."
  file: repos/liquibase-multi-schema/changelog/001-baseline.xml
  start_line: 7
  end_line: 7
- rule_id: PGM108
  severity: Info
  message: "Column 'account_number' on 'billing.users' uses varchar(100). Prefer text — varchar(n) has no performance benefit in PostgreSQL and adds an artificial limit that may require future schema changes."
  file: repos/liquibase-multi-schema/changelog/001-baseline.xml
  start_line: 19
  end_line: 19
- rule_id: PGM108
  severity: Info
  message: "Column 'name' on 'inventory.products' uses varchar(200). Prefer text — varchar(n) has no performance benefit in PostgreSQL and adds an artificial limit that may require future schema changes."
  file: repos/liquibase-multi-schema/changelog/001-baseline.xml
  start_line: 46
  end_line: 46
- rule_id: PGM108
  severity: Info
  message: "Column 'sku' on 'inventory.products' uses varchar(50). Prefer text — varchar(n) has no performance benefit in PostgreSQL and adds an artificial limit that may require future schema changes."
  file: repos/liquibase-multi-schema/changelog/001-baseline.xml
  start_line: 46
  end_line: 46
- rule_id: PGM108
  severity: Info
  message: "Column 'billing_address' on 'billing.users' uses varchar(500). Prefer text — varchar(n) has no performance benefit in PostgreSQL and adds an artificial limit that may require future schema changes."
  file: repos/liquibase-multi-schema/changelog/003-same-name-ops.xml
  start_line: 19
  end_line: 19
- rule_id: PGM402
  severity: Minor
  message: "CREATE TABLE 'auth.users': add IF NOT EXISTS for idempotent migrations."
  file: repos/liquibase-multi-schema/changelog/001-baseline.xml
  start_line: 7
  end_line: 7
- rule_id: PGM402
  severity: Minor
  message: "CREATE TABLE 'billing.users': add IF NOT EXISTS for idempotent migrations."
  file: repos/liquibase-multi-schema/changelog/001-baseline.xml
  start_line: 19
  end_line: 19
- rule_id: PGM402
  severity: Minor
  message: "CREATE TABLE 'billing.invoices': add IF NOT EXISTS for idempotent migrations."
  file: repos/liquibase-multi-schema/changelog/001-baseline.xml
  start_line: 31
  end_line: 31
- rule_id: PGM402
  severity: Minor
  message: "CREATE TABLE 'inventory.products': add IF NOT EXISTS for idempotent migrations."
  file: repos/liquibase-multi-schema/changelog/001-baseline.xml
  start_line: 46
  end_line: 46
- rule_id: PGM402
  severity: Minor
  message: "CREATE TABLE 'orders': add IF NOT EXISTS for idempotent migrations."
  file: repos/liquibase-multi-schema/changelog/001-baseline.xml
  start_line: 61
  end_line: 61
- rule_id: PGM402
  severity: Minor
  message: "CREATE INDEX 'idx_orders_product_id': add IF NOT EXISTS for idempotent migrations."
  file: repos/liquibase-multi-schema/changelog/002-cross-schema-fks.xml
  start_line: 30
  end_line: 30
- rule_id: PGM402
  severity: Minor
  message: "CREATE INDEX 'idx_auth_users_email': add IF NOT EXISTS for idempotent migrations."
  file: repos/liquibase-multi-schema/changelog/003-same-name-ops.xml
  start_line: 26
  end_line: 26
- rule_id: PGM402
  severity: Minor
  message: "CREATE INDEX 'idx_billing_users_acct': add IF NOT EXISTS for idempotent migrations."
  file: repos/liquibase-multi-schema/changelog/003-same-name-ops.xml
  start_line: 33
  end_line: 33
- rule_id: PGM501
  severity: Major
  message: "Foreign key on 'billing.invoices(user_id)' has no covering index. Queries joining or filtering on these columns, and referential integrity checks, cause sequential scans on the referencing table."
  file: repos/liquibase-multi-schema/changelog/002-cross-schema-fks.xml
  start_line: 12
  end_line: 14
- rule_id: PGM501
  severity: Major
  message: "Foreign key on 'orders(product_id)' has no covering index. Queries joining or filtering on these columns, and referential integrity checks, cause sequential scans on the referencing table."
  file: repos/liquibase-multi-schema/changelog/002-cross-schema-fks.xml
  start_line: 21
  end_line: 23
