tests/snapshots/bridge__tests__updatesql_lint_004_only.snap
---
source: tests/bridge.rs
expression: findings
---
- rule_id: PGM001
  severity: Critical
  message: "CREATE INDEX on existing table 'users' should use CONCURRENTLY to avoid holding a SHARE lock that blocks writes."
  file: 004-create-indexes.xml
  start_line: 1
  end_line: 1
- rule_id: PGM001
  severity: Critical
  message: "CREATE INDEX on existing table 'subscriptions' should use CONCURRENTLY to avoid holding a SHARE lock that blocks writes."
  file: 004-create-indexes.xml
  start_line: 1
  end_line: 1
- rule_id: PGM001
  severity: Critical
  message: "CREATE INDEX on existing table 'products' should use CONCURRENTLY to avoid holding a SHARE lock that blocks writes."
  file: 004-create-indexes.xml
  start_line: 1
  end_line: 1
- rule_id: PGM402
  severity: Minor
  message: "CREATE INDEX 'idx_users_email': add IF NOT EXISTS for idempotent migrations."
  file: 004-create-indexes.xml
  start_line: 1
  end_line: 1
- rule_id: PGM402
  severity: Minor
  message: "CREATE INDEX 'idx_subscriptions_account_id': add IF NOT EXISTS for idempotent migrations."
  file: 004-create-indexes.xml
  start_line: 1
  end_line: 1
- rule_id: PGM402
  severity: Minor
  message: "CREATE INDEX 'idx_products_name_article': add IF NOT EXISTS for idempotent migrations."
  file: 004-create-indexes.xml
  start_line: 1
  end_line: 1
