tests/snapshots/bridge__tests__updatesql_lint_005_only.snap
---
source: tests/bridge.rs
expression: findings
---
- rule_id: PGM014
  severity: Critical
  message: "Adding FOREIGN KEY constraint on existing table 'orders' without NOT VALID will scan the entire table while holding a SHARE ROW EXCLUSIVE lock on both the referencing and referenced tables. Use ADD CONSTRAINT ... NOT VALID, then VALIDATE CONSTRAINT in a separate statement."
  file: 005-add-fk.xml
  start_line: 1
  end_line: 1
- rule_id: PGM014
  severity: Critical
  message: "Adding FOREIGN KEY constraint on existing table 'subscriptions' without NOT VALID will scan the entire table while holding a SHARE ROW EXCLUSIVE lock on both the referencing and referenced tables. Use ADD CONSTRAINT ... NOT VALID, then VALIDATE CONSTRAINT in a separate statement."
  file: 005-add-fk.xml
  start_line: 1
  end_line: 1
- rule_id: PGM014
  severity: Critical
  message: "Adding FOREIGN KEY constraint on existing table 'orders' without NOT VALID will scan the entire table while holding a SHARE ROW EXCLUSIVE lock on both the referencing and referenced tables. Use ADD CONSTRAINT ... NOT VALID, then VALIDATE CONSTRAINT in a separate statement."
  file: 005-add-fk.xml
  start_line: 1
  end_line: 1
- rule_id: PGM501
  severity: Major
  message: "Foreign key on 'orders(user_id)' has no covering index. Queries joining or filtering on these columns, and referential integrity checks, cause sequential scans on the referencing table."
  file: 005-add-fk.xml
  start_line: 1
  end_line: 1
