tests/snapshots/bridge__tests__updatesql_lint_006_only.snap
---
source: tests/bridge.rs
expression: findings
---
- rule_id: PGM101
  severity: Minor
  message: "Column 'created' on 'event_log' uses 'timestamp without time zone'. Use 'timestamptz' (timestamp with time zone) instead to store unambiguous points in time."
  file: 006-table-no-pk.xml
  start_line: 1
  end_line: 1
- rule_id: PGM108
  severity: Info
  message: "Column 'event_type' on 'event_log' uses varchar(100). Prefer text — varchar(n) has no performance benefit in PostgreSQL and adds an artificial limit that may require future schema changes."
  file: 006-table-no-pk.xml
  start_line: 1
  end_line: 1
- rule_id: PGM108
  severity: Info
  message: "Column 'invoice_id' on 'subscription_invoices' uses varchar(19). Prefer text — varchar(n) has no performance benefit in PostgreSQL and adds an artificial limit that may require future schema changes."
  file: 006-table-no-pk.xml
  start_line: 1
  end_line: 1
- rule_id: PGM402
  severity: Minor
  message: "CREATE TABLE 'event_log': add IF NOT EXISTS for idempotent migrations."
  file: 006-table-no-pk.xml
  start_line: 1
  end_line: 1
- rule_id: PGM402
  severity: Minor
  message: "CREATE TABLE 'subscription_invoices': add IF NOT EXISTS for idempotent migrations."
  file: 006-table-no-pk.xml
  start_line: 1
  end_line: 1
- rule_id: PGM501
  severity: Major
  message: "Foreign key on 'subscription_invoices(subscription_id)' has no covering index. Queries joining or filtering on these columns, and referential integrity checks, cause sequential scans on the referencing table."
  file: 006-table-no-pk.xml
  start_line: 2
  end_line: 2
- rule_id: PGM502
  severity: Major
  message: "Table 'subscription_invoices' has no primary key."
  file: 006-table-no-pk.xml
  start_line: 1
  end_line: 1
- rule_id: PGM503
  severity: Info
  message: "Table 'event_log' uses UNIQUE NOT NULL instead of PRIMARY KEY. Functionally equivalent but PRIMARY KEY is conventional and more explicit."
  file: 006-table-no-pk.xml
  start_line: 1
  end_line: 1
